# OmnidomeServer

./: CMakeLists.txt  README.md
doc/: omnidome-server.doxygen
src/: main.c
